corrected issue #2 about wrong IE thead text alignment

--- a/sass/tables.scss
+++ b/sass/tables.scss
@@ -8,6 +8,9 @@
     }
 
     thead {
+        th {
+            text-align:left;
+        }
         font-weight:bold;
         border-bottom:3px $light-grey solid;
     }
